Formatting is fixed, font size of text fixed,I use data-test-selectors for picking up the DOM elements,Done  navbar and 404 content visible, then after scrolling a bit, footer should appear fixed, fixed image size in mobile

--- a/app/styles/page-not-found.css
+++ b/app/styles/page-not-found.css
@@ -1,13 +1,23 @@
 .page-not-found{
-    margin: auto;
-    text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 75vh;
+  margin: 3rem 0;
+}
+  
+.page-not-found__text{
+  font-size: 1.75rem;
+  text-align: center; 
+}
+
+@media screen and (max-width: 625px) {
+  .page-not-found__text{
+    font-size: 1.5rem;
   }
   
   .page-not-found__img {
-    width: 20%;
+    width: 70%;
   }
-  
-  .page-not-found__text{
-    font-size: 15px;
-    font-weight: bold;
-  }
+}
